# sysml2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  rebuild.sh  test-validation.sh
archive/old-parser/: parser.c  parser.h  semantic.c  test_parser.c
grammar/: sysml.peg  sysml_parser.c  sysml_parser.h
include/sysml2/: arena.h  ast.h  ast_builder.h  cli.h  common.h  diagnostic.h  import_resolver.h  intern.h  json_writer.h  lexer.h  modify.h  pipeline.h  query.h  semantic.h  symbol.h  symtab.h  sysml_parser.h  sysml_writer.h  token.h  utils.h  validator.h
src/: arena.c  ast.c  ast_builder.c  diagnostic.c  import_resolver.c  intern.c  json_writer.c  keywords.c  lexer.c  main.c  modify.c  parser.c  parser_expr.c  pipeline.c  query.c  symbol.c  symtab.c  sysml_parser.c  sysml_parser.h  sysml_writer.c  utils.c  validator.c
tests/: test_allow_semantic_errors.sh  test_ast.c  test_cli_crud.sh  test_cli_delete_edge_cases.sh  test_cli_list.sh  test_cli_modify_combinations.sh  test_cli_modify_errors.sh  test_cli_replace_scope.sh  test_cli_set_edge_cases.sh  test_comprehensive_data_loss.sh  test_diagnostic.c  test_error_case.sh  test_error_reporting.sh  test_exit_codes.sh  test_import_resolver.c  test_json_output.sh  test_json_writer.c  test_lexer.c  test_memory.c  test_modify.c  test_package_discovery.sh  test_packcc_parser.c  test_query.c  test_sysml_fix.sh  test_sysml_output.sh  test_sysml_writer.c  test_validation.sh  test_validator.c
tests/fixtures/: comprehensive_data_loss.sysml  errors.kerml  simple.kerml  vehicle.sysml
tests/fixtures/errors/: bad_doc_syntax.sysml  bad_multiplicity.expected  bad_multiplicity.sysml  double_colon_typo.sysml  invalid_operator.expected  invalid_operator.sysml  missing_name.expected  missing_name.sysml  missing_semicolon.sysml  unclosed_brace.sysml  unexpected_keyword.expected  unexpected_keyword.sysml  unterminated_string.expected  unterminated_string.sysml
tests/fixtures/format/: 01-simple-package.input.sysml  02-nested-packages.expected.sysml  02-nested-packages.input.sysml  03-definitions.expected.sysml  03-definitions.input.sysml  04-usages-typed.expected.sysml  04-usages-typed.input.sysml  05-comments-line.expected.sysml  05-comments-line.input.sysml  06-comments-block.expected.sysml  06-comments-block.input.sysml  07-imports.expected.sysml  07-imports.input.sysml  08-deep-nesting.expected.sysml  08-deep-nesting.input.sysml  09-quoted-names.expected.sysml  09-quoted-names.input.sysml  11-doc-comment.expected.sysml  12-enum-members.expected.sysml  13-prefix-metadata.expected.sysml  13-prefix-metadata.input.sysml  14-requirement-body.expected.sysml  14-requirement-body.input.sysml  15-usecase-body.expected.sysml  15-usecase-body.input.sysml  16-concern-stakeholder.expected.sysml  16-concern-stakeholder.input.sysml  17-connection-end.expected.sysml  17-connection-end.input.sysml  18-return-usage.expected.sysml  18-return-usage.input.sysml  19-trailing-body-comment.input.sysml  20-comment-between-siblings.input.sysml  21-file-metadata-only.input.sysml  22-file-metadata-multiple.expected.sysml  23-file-metadata-no-features.expected.sysml  24-action-trailing-comment.expected.sysml  24-action-trailing-comment.input.sysml  25-accept-transition-trailing-comment.expected.sysml  25-accept-transition-trailing-comment.input.sysml  (+2 more)
tests/fixtures/format/10-cross-file/: main.expected.sysml  main.input.sysml  types.expected.sysml  types.input.sysml
tests/fixtures/json/: 01-simple-package.json  01-simple-package.sysml  02-definitions.json  02-definitions.sysml  03-nested-packages.json  03-nested-packages.sysml  04-typed-usages.json  04-typed-usages.sysml  05-actions-states.json  05-actions-states.sysml  06-requirements.json  06-requirements.sysml  07-all-element-types.json  07-all-element-types.sysml  08-quoted-names.json  08-quoted-names.sysml  kerml_behaviors.json  kerml_behaviors.kerml  kerml_features.json  kerml_features.kerml  kerml_types.json  kerml_types.kerml
tests/fixtures/modify/: delete-basic.expected  delete-basic.sysml  set-base.expected  set-base.sysml  set-fragment.sysml
tests/fixtures/official/phase2-basic/: AliasImport.sysml  CircularImport.sysml  Comments.sysml  FlashlightExample.sysml  PrivateImportTest.sysml  QualifiedNameImportTest.sysml  RoomModel.sysml
tests/fixtures/package_discovery/: main.sysml
tests/fixtures/package_discovery/behavior/: _index.sysml
tests/fixtures/valid/: ConnectionUsageTest.sysml
tests/fixtures/validation/: abstract_instantiation.sysml  cross_file_a.sysml  cross_file_b.sysml  datatype_basic.sysml  e3001_line_number.expected  e3001_line_number.sysml  e3001_undefined_qualified.expected  e3001_undefined_qualified.sysml  e3001_undefined_simple.expected  e3001_undefined_simple.sysml  e3002_undefined_redefines.sysml  e3002_valid_redefines.sysml  e3003_undefined_namespace.sysml  e3003_valid_import.sysml  e3004_duplicate_same_scope.expected  e3004_duplicate_same_scope.sysml  e3004_line_number.expected  e3004_line_number.sysml  e3005_circular_direct.expected  e3005_circular_direct.sysml  e3005_circular_indirect.expected  e3005_circular_indirect.sysml  e3006_part_typed_action.expected  e3006_part_typed_action.sysml  e3007_inverted_bounds.sysml  e3007_negative.sysml  e3007_valid_multiplicity.sysml  e3008_mult_widening.sysml  e3008_type_widening.sysml  e3008_valid_narrowing.sysml  kerml_behaviors.kerml  kerml_connectors.kerml  kerml_features.kerml  kerml_relationships.kerml  kerml_types.kerml  package_merge_a.sysml  package_merge_b.sysml  package_merge_c.sysml  transitive_import_a.sysml  transitive_import_b.sysml  (+2 more)
